[gd_scene load_steps=39 format=2]

[ext_resource path="res://characters/enemies/special_bosses/dark_knight/assets/BarV8_ProgressBar.png" type="Texture" id=1]
[ext_resource path="res://characters/enemies/special_bosses/dark_knight/assets/BarV8_Bar.png" type="Texture" id=2]
[ext_resource path="res://characters/enemies/special_bosses/dark_knight/assets/Death Knight-Sheet.png" type="Texture" id=3]
[ext_resource path="res://characters/enemies/special_bosses/dark_knight/scripts/DarkKnight.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=62]
radius = 7.0
height = 34.6667

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 11.5, 23.5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/AttackCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackArea/AttackCollision:shape:extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 11.5, 23.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "attack"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 78, 79, 80, 81, 82, 83 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/AttackCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackArea/AttackCollision:shape:extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 11.5, 23.5 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "death"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 71, 72, 73, 74, 75, 76 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=36]
resource_name = "heal"

[sub_resource type="Animation" id=6]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=10]
resource_name = "knee"
length = 1.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 1, 1.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 66, 68, 70, 71 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_death_dialog"
} ]
}

[sub_resource type="Animation" id=11]
resource_name = "spell"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 89, 90, 91, 92, 89, 90, 91, 92, 93, 94, 95, 96, 97 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "cast_spell"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14, 15, 16, 17, 18 ]
}

[sub_resource type="Animation" id=88]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=89]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=90]
resource_name = "weak_hit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.478431, 1, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=63]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=65]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=67]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=68]
animation = "knee"

[sub_resource type="AnimationNodeAnimation" id=82]
animation = "spell"

[sub_resource type="AnimationNodeAnimation" id=70]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=71]

[sub_resource type="AnimationNodeStateMachineTransition" id=72]

[sub_resource type="AnimationNodeStateMachineTransition" id=73]

[sub_resource type="AnimationNodeStateMachineTransition" id=77]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=79]

[sub_resource type="AnimationNodeStateMachineTransition" id=80]

[sub_resource type="AnimationNodeStateMachineTransition" id=81]

[sub_resource type="AnimationNodeStateMachineTransition" id=83]

[sub_resource type="AnimationNodeStateMachineTransition" id=84]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=85]

[sub_resource type="AnimationNodeStateMachineTransition" id=86]

[sub_resource type="AnimationNodeStateMachineTransition" id=91]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=34]
states/attack/node = SubResource( 63 )
states/attack/position = Vector2( 318, 211 )
states/death/node = SubResource( 65 )
states/death/position = Vector2( 502, 421 )
states/idle/node = SubResource( 67 )
states/idle/position = Vector2( 502, 211 )
states/knee/node = SubResource( 68 )
states/knee/position = Vector2( 502, 326 )
states/spell/node = SubResource( 82 )
states/spell/position = Vector2( 100, 421 )
states/walk/node = SubResource( 70 )
states/walk/position = Vector2( 318, 421 )
transitions = [ "idle", "walk", SubResource( 71 ), "walk", "attack", SubResource( 72 ), "walk", "knee", SubResource( 73 ), "attack", "walk", SubResource( 77 ), "knee", "death", SubResource( 79 ), "idle", "knee", SubResource( 80 ), "attack", "knee", SubResource( 81 ), "walk", "spell", SubResource( 83 ), "spell", "walk", SubResource( 84 ), "spell", "knee", SubResource( 85 ), "spell", "attack", SubResource( 86 ), "death", "walk", SubResource( 91 ) ]
start_node = "idle"
graph_offset = Vector2( -165, 168 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=35]

[sub_resource type="CircleShape2D" id=87]
radius = 1.4142

[node name="DarkKnight" type="KinematicBody2D" groups=["Boss", "Enemy"]]
scale = Vector2( 3, 3 )
collision_layer = 8
collision_mask = 81
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 11
vframes = 12

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 62 )

[node name="AttackArea" type="Area2D" parent="." groups=["Attack"]]
collision_layer = 32
collision_mask = 20

[node name="AttackCollision" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 28.5, -4.5 )
shape = SubResource( 12 )
disabled = true

[node name="PlayerDetectionMeleeArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="PlayerDetectionMeleeCollision" type="CollisionShape2D" parent="PlayerDetectionMeleeArea"]
position = Vector2( 28.5, -4.5 )
shape = SubResource( 12 )

[node name="Animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/attack = SubResource( 3 )
anims/death = SubResource( 4 )
anims/heal = SubResource( 36 )
anims/idle = SubResource( 6 )
anims/knee = SubResource( 10 )
anims/spell = SubResource( 11 )
anims/walk = SubResource( 9 )

[node name="DamageAnimation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 88 )
anims/hit = SubResource( 89 )
anims/weak_hit = SubResource( 90 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 34 )
anim_player = NodePath("../Animation")
parameters/playback = SubResource( 35 )

[node name="Raycasts" type="Node2D" parent="."]

[node name="NoFloorRaycast" type="RayCast2D" parent="Raycasts"]
position = Vector2( 13, 0 )
enabled = true
cast_to = Vector2( 0, 29 )

[node name="PlayerDetectionDialogRaycast" type="RayCast2D" parent="Raycasts"]
position = Vector2( 0, 23.3333 )
enabled = true
cast_to = Vector2( 100, 0 )
collision_mask = 4

[node name="SpellRange" type="RayCast2D" parent="Raycasts"]
position = Vector2( 17, 0 )
enabled = true
cast_to = Vector2( 60, 0 )
collision_mask = 4

[node name="PlayerOnBackRaycast" type="RayCast2D" parent="Raycasts"]
position = Vector2( -20.6666, 0 )
enabled = true
cast_to = Vector2( -100, 0 )
collision_mask = 4

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -41.0
margin_top = -35.0
margin_right = 233.0
margin_bottom = -10.0
rect_scale = Vector2( 0.3, 0.3 )
max_value = 2000.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 1 )
texture_progress_offset = Vector2( 2, 2 )
tint_under = Color( 1, 0, 0, 1 )

[node name="SpellSpawns" type="Node2D" parent="."]

[node name="SpellSpawn" type="Position2D" parent="SpellSpawns"]
position = Vector2( 40, -15.3333 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="SpellSpawns/SpellSpawn"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpellSpawns/SpellSpawn/Area2D"]
shape = SubResource( 87 )

[node name="SpellSpawn2" type="Position2D" parent="SpellSpawns"]
position = Vector2( 33.6667, -4.33333 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="SpellSpawns/SpellSpawn2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpellSpawns/SpellSpawn2/Area2D"]
shape = SubResource( 87 )

[node name="SpellSpawn3" type="Position2D" parent="SpellSpawns"]
position = Vector2( 26, 4.66667 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="SpellSpawns/SpellSpawn3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpellSpawns/SpellSpawn3/Area2D"]
shape = SubResource( 87 )

[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_entered" from="PlayerDetectionMeleeArea" to="." method="_on_PlayerDetectionMeleeArea_body_entered"]
[connection signal="body_exited" from="PlayerDetectionMeleeArea" to="." method="_on_PlayerDetectionMeleeArea_body_exited"]
[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
